--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Docker[[:space:]]Desktop[[:space:]]Installer.exe filter=lfs diff=lfs merge=lfs -text
+*.exe[[:space:]]*.msi[[:space:]]*.7z[[:space:]]-type[[:space:]]f[[:space:]]-size[[:space:]]+100M filter=lfs diff=lfs merge=lfs -text
